# sajak

./: Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: update-flake-lock.yaml
nix/: module.nix  package.nix
prefab_fsts/: elements.fst  us_states.fst
src/: cli.rs  compile.rs  corpus.rs  expr.rs  frontends.rs  fst_ops.rs  lib.rs  nu.rs  query.rs
src/corpus/: build.rs  parsing.rs  search.rs  serialization.rs  serialization_fmt.txt  simple_trie.rs  trie.rs
src/http/: error.rs  health.rs  query.rs
src/nu/: command_sajak.rs  command_sajak_trie.rs  plugin.rs  plugin_ops.rs  tablify_results.rs
