[package]
name = "sajak"
version = "0.1.0"
edition = "2021"

[dependencies]
counter = { version = "0.6.0", features = ["serde"] }
dirs = "5.0.1"
nom = "8.0.0"
nu-plugin = "0.111.0"
nu-protocol = "0.111.0"
regex = "1.11.1"
rustfst = "1.1.2"
serde = "1.0.214"
serde_json = "1.0.132"
unidecode = "0.3.0"

[profile.release]
debug = true
